Fixed text align in  button issue

--- a/src/sections/jobs-page/JobDetails.module.css
+++ b/src/sections/jobs-page/JobDetails.module.css
@@ -25,6 +25,7 @@
 }
 
 .bannerText > button {
+  text-align: center;
   border-radius: 100px;
   margin-top: 20px;
   background-color: var(--medium-yellow);
